add shiny indicator icon, pokemon name, pokemon global id, and enter to submit functionality

--- a/public/index.html
+++ b/public/index.html
@@ -1,28 +1,30 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
   <head>
     <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-MVPDCFJDVH"></script>
-<script>
-  window.dataLayer = window.dataLayer || [];
-  function gtag(){dataLayer.push(arguments);}
-  gtag('js', new Date());
+    <script
+      async
+      src="https://www.googletagmanager.com/gtag/js?id=G-MVPDCFJDVH"
+    ></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag() {
+        dataLayer.push(arguments);
+      }
+      gtag("js", new Date());
 
-  gtag('config', 'G-MVPDCFJDVH');
-</script>
+      gtag("config", "G-MVPDCFJDVH");
+    </script>
 
     <meta charset="utf-8" />
     <link rel="icon" href="%PUBLIC_URL%/pointer.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#ff0000" />
-    <meta
-      name="description"
-      content="POKiDex App"
-    />
+    <meta name="description" content="POKiDex App" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/pointer.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>POKiDEX App</title>
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="index.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
